Text inputs size on mobile fix

--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -104,8 +104,8 @@
 
 	@media only screen and (max-width : 460px) {
 		font-size: bkscale(@font-swatch7-font-size, 0.75);
-		height: (@font-swatch7-font-size * 2);
-		line-height: (@font-swatch7-font-size * 2);
+		height: (@font-swatch7-font-size * 2 + 4);
+		line-height: (@font-swatch7-font-size * 2 + 4);
 	} 
 
 	&:hover {
